--- a/src/app/components/dashboard/ventas/venta/vista/vista.component.html
+++ b/src/app/components/dashboard/ventas/venta/vista/vista.component.html
@@ -24,8 +24,7 @@
                                    aria-label="Empleado"
                                    matInput
                                    [readonly]="true"
-                                   formControlName="empleado"     
-                                   value="{{service.form.value?.empleado?.nombre}}">
+                                   formControlName="empleado">
                           </mat-form-field>
                     </div>
                         <div class="form-group col-md-6" formGroupName="sucursal">
