--- a/src/app/components/dashboard/recursos-humanos/empleado/empleado-list/empleado-list.component.html
+++ b/src/app/components/dashboard/recursos-humanos/empleado/empleado-list/empleado-list.component.html
@@ -27,9 +27,12 @@
             <td mat-cell *matCellDef="let element"> {{element.apellido}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="direccion">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Direccion </th>
-            <td mat-cell *matCellDef="let element"> {{element.direccion}} </td>
+        <ng-container matColumnDef="estado">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado </th>
+            <td mat-cell *matCellDef="let element">
+                <label *ngIf="element.estado === true" style="color: #1878b0; font-weight: bold">Activo</label>
+                <label *ngIf="element.estado === false" style="color: #c40e0e; font-weight: bold">Innactivo</label>
+            </td>
         </ng-container>
 
         <ng-container matColumnDef="telefono">
@@ -57,9 +60,15 @@
                 <a (click)="verEdit(element)" class="pointer mx-2" style="color: #1f516f" matTooltip="Editar">
                     <mat-icon>edit</mat-icon>
                 </a>
-                <a (click)="elimininarPuesto(element.id)" class="pointer mx-2" style="color: #e15639" matTooltip="Eliminar">
-                    <mat-icon>delete</mat-icon>
+
+                <a *ngIf="element.estado === false" (click)="activarEmpleado(element)" class="pointer mx-2" style="color: #1878b0" matTooltip="activar">
+                    <mat-icon>lock_open</mat-icon>
                 </a>
+                
+                <a *ngIf="element.estado === true" (click)="elimininarEmpleado(element)" class="pointer mx-2" style="color: #e15639" matTooltip="Eliminar Usuario">
+                    <mat-icon>lock</mat-icon>
+                </a>
+                
             </td>
         </ng-container>
         <!-- Fin de Columnas-->
