--- a/src/app/components/dashboard/finanzas/caja/caja-list/caja-corte/caja-corte.component.html
+++ b/src/app/components/dashboard/finanzas/caja/caja-list/caja-corte/caja-corte.component.html
@@ -22,6 +22,20 @@
                 <p-inputNumber mode="currency" currency="GTQ" locale="es-GT" [ngModel]="totalCobro" [readonly]="true"></p-inputNumber>
             </div>
         </div>
+        <div class="col-6">
+            <label>Cobros efectivo</label>
+            <div class="p-inputgroup">
+                <span class="p-inputgroup-addon"><i class="pi pi-money-bill"></i></span>
+                <p-inputNumber mode="currency" currency="GTQ" locale="es-GT" [ngModel]="totalCobroEfectivo" [readonly]="true"></p-inputNumber>
+            </div>
+        </div>
+        <div class="col-6">
+            <label>Cobros banco</label>
+            <div class="p-inputgroup">
+                <span class="p-inputgroup-addon"><i class="pi pi-money-bill"></i></span>
+                <p-inputNumber mode="currency" currency="GTQ" locale="es-GT" [ngModel]="totalCobroBanco" [readonly]="true"></p-inputNumber>
+            </div>
+        </div>
     </div>
     <div class="p-fluid grid">
         <div class="col-6">
@@ -58,6 +72,20 @@
             <div class="p-inputgroup">
                 <span class="p-inputgroup-addon"><i class="pi pi-money-bill"></i></span>
                 <p-inputNumber mode="currency" currency="GTQ" locale="es-GT" [ngModel]="totalCuentasPorCobrar" [readonly]="true"></p-inputNumber>
+            </div>
+        </div>
+        <div class="col-6">
+            <label>Cuentas Por Cobrar efectivo</label>
+            <div class="p-inputgroup">
+                <span class="p-inputgroup-addon"><i class="pi pi-money-bill"></i></span>
+                <p-inputNumber mode="currency" currency="GTQ" locale="es-GT" [ngModel]="totalCuentasPorCobrarEfectivo" [readonly]="true"></p-inputNumber>
+            </div>
+        </div>
+        <div class="col-6">
+            <label>Cuentas Por Cobrar banco</label>
+            <div class="p-inputgroup">
+                <span class="p-inputgroup-addon"><i class="pi pi-money-bill"></i></span>
+                <p-inputNumber mode="currency" currency="GTQ" locale="es-GT" [ngModel]="totalCuentasPorCobrarBanco" [readonly]="true"></p-inputNumber>
             </div>
         </div>
     </div>
